chore: add PyPI metadata and final release preparation
- Add PyPI classifiers (Development Status, License, Python versions, Topics)
- Add project URLs (Homepage, Repository, Issues)
- Implement info command to display model details in terminal
- All tests pass with 90% coverage
- Full validation suite passes (ruff, mypy, pre-commit)
- Package builds successfully and installs correctly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,27 @@ description = "Interactive visualization tool for dbt model lineage"
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Database",
+    "Topic :: Software Development :: Libraries",
+]
 dependencies = [
     "typer>=0.9.0",
     "rich>=13.0.0",
     "sqlglot>=20.0.0",
 ]
+
+[project.urls]
+Homepage = "https://github.com/your-username/dbt-viz"
+Repository = "https://github.com/your-username/dbt-viz"
+Issues = "https://github.com/your-username/dbt-viz/issues"
 
 [project.optional-dependencies]
 dev = [
